# git

./: .editorconfig  .gitignore  GIT-VERSION-GEN  Makefile  README.md  Reintegrate  apply.c  blame-tree-internal.h  blame-tree.c  blame-tree.h  blame.c  bloom.c  builtin.h  bulk-checkin.c  bulk-checkin.h  bundle-uri.c  bundle-uri.h  bundle.c  cache.h  command-list.txt  commit-graph.c  commit-graph.h  commit.c  commit.h  config.c  config.h  connected.c  csum-file.c  date.c  delta-islands.c  diff-lib.c  diff.c  diff.h  entry.c  environment.c  environment.h  fetch-pack.c  fmt-merge-msg.c  generate-configlist.sh  generate-hooklist.sh  (+102 more)
.github/workflows/: check-whitespace.yml  coverity.yml  main.yml
Documentation/: Makefile  config.txt  diff-options.adoc  fetch-options-shared.txt  fetch-options.txt  generate-mergetool-list.sh  git-clone.txt  git-commit-graph.txt  git-for-each-ref.txt  git-gc.txt  git-index-pack.txt  git-last-modified.adoc  git-multi-pack-index.adoc  git-multi-pack-index.txt  git-pack-objects.adoc  git-pack-objects.txt  git-push.txt  git-repack.adoc  git-repack.txt  gitformat-pack.txt  gitpacking.txt  meson.build  rev-list-options.adoc  rev-list-options.txt
Documentation/config/: bitmap-pseudo-merge.txt  bundle.adoc  diff.txt  gc.txt  graph.txt  pack.adoc  pack.txt  transfer.txt
Documentation/howto/: maintain-git.txt
Documentation/technical/: bitmap-format.txt  blame-tree-cache-format.txt  cruft-packs.txt  multi-pack-index.adoc  multi-pack-index.txt  pack-format.txt  partial-clone.txt
builtin/: am.c  backfill.c  bisect.c  blame-tree.c  blame.c  branch.c  bugreport.c  cat-file.c  check-attr.c  check-ignore.c  checkout.c  clone.c  commit-graph.c  commit.c  count-objects.c  diff-tree.c  fast-import.c  fetch.c  for-each-ref.c  fsck.c  gc.c  index-pack.c  last-modified.c  log.c  mailinfo.c  merge-tree.c  merge.c  multi-pack-index.c  notes.c  pack-objects.c  pack-redundant.c  pull.c  push.c  rebase.c  receive-pack.c  refs.c  remote.c  repack.c  replay.c  reset.c  (+11 more)
ci/: install-dependencies.sh  lib.sh  run-build-and-tests.sh
compat/: mingw.c
config/: config.mak  exclude
contrib/buildsystems/: CMakeLists.txt
contrib/credential/libsecret/: Makefile
contrib/credential/netrc/: Makefile
contrib/credential/osxkeychain/: Makefile
contrib/credential/wincred/: Makefile  git-credential-wincred.c
contrib/git-jump/: README  git-jump
ewah/: bitmap.c  ewah_bitmap.c  ewok.h
gitk-git/po/: vi.po
gitweb/: GITWEB-BUILD-OPTIONS.in  Makefile  generate-gitweb.sh  gitweb.perl  meson.build
refs/: debug.c  files-backend.c  packed-backend.c  reftable-backend.c
reftable/: basics_test.c  block_test.c  merged_test.c  readwrite_test.c  record.c  refname_test.c  stack.c  stack_test.c
t/: lib-bitmap.sh  lib-commit-graph.sh  lib-credential.sh  lib-cruft.sh  lib-disjoint.sh  lib-midx.sh  meson.build  t0100-previous.sh  t0410-partial-clone.sh  t0602-reffiles-fsck.sh  t1008-read-tree-overlay.sh  t1009-read-tree-new-index.sh  t1400-update-ref.sh  t1419-exclude-refs.sh  t1505-rev-parse-last.sh  t1506-rev-parse-diagnosis.sh  t2009-checkout-statinfo.sh  t4013-diff-various.sh  t4022-diff-rewrite.sh  t4036-format-patch-signer-mime.sh  t4070-diff-max-depth.sh  t4109-apply-multifrag.sh  t4133-apply-filenames.sh  t4216-log-bloom.sh  t4301-merge-tree-write-tree.sh  t5300-pack-object.sh  t5310-pack-bitmaps.sh  t5318-commit-graph.sh  t5319-multi-pack-index.sh  t5320-delta-islands.sh  t5324-split-commit-graph.sh  t5325-reverse-index.sh  t5326-multi-pack-bitmaps.sh  t5327-pack-objects-cruft.sh  t5329-pack-objects-cruft.sh  t5331-pack-objects-stdin.sh  t5332-multi-pack-reuse.sh  t5333-pseudo-merge-bitmaps.sh  t5334-incremental-multi-pack-index.sh  t5335-compact-multi-pack-index.sh  (+31 more)
t/helper/: test-bitmap.c  test-bloom.c  test-find-pack.c  test-hashmap.c  test-oid-cache.c  test-pack-mtimes.c  test-parse-options.c  test-read-graph.c  test-read-midx.c  test-ref-store.c  test-regex.c  test-rot13-filter.c  test-tool.c  test-tool.h
t/perf/: lib-bitmap.sh  p5303-many-packs.sh  p5310-pack-bitmaps.sh  p5315-pack-objects-filter.sh  p5326-multi-pack-bitmaps.sh  p9902-github-blame-tree.sh
templates/: meson.build
templates/hooks/: meson.build
templates/info/: meson.build
trace2/: tr2_ctr.c
xdiff/: xprepare.c
